improve and add contact

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
       <li class="nav-option">About</li>
       <li class="nav-option"><a href="./index.html">Portfolio</a></li>
+      <li class="nav-option"><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
   <div class="under-nav"></div>
@@ -23,24 +24,24 @@
     <section class="about-main-text">
       <img src="./imgs/profile-drawing.png" alt="" class="about-drawing">
       <p class="heading">I'm a designer and deep thinker driven to create meaningful products, using tech to inspire joy. I offer consultancy, design, and development. I also know about copywriting and brand. </p>
-      <p class="heading">When I'm not working on freelance design projects or teaching yoga, you can find me guest lecturing at UCA in Front End Development and Interaction Design.</p>
-
+      <p class="heading">When I'm not working on freelance design projects, you can find me teaching web development at universities.</p>
+      <div class="contact__button"><a href="./contact.html">Get in touch</a></div>
       <h2>My approach to designing and making is:</h2>
       <ul class="my-approach-list">
-        <li>User-centred.</li>
+        <h3><li>User-centred.</li></h3>
         <dl>Every stage in the design process is informed by the needs or wants of the customer or "user".</dl>
-        <li>Empirical and agile.</li>
+        <h3><li>Empirical and agile.</li></h3>
         <dl>I do not make assumptions about how the user sees or experiences the world; I hypothesise and I investigate. I strongly believe in the value of obtaining user feedback, then having the agility to incorporate learnings as efficiently and effectively
           as possible.</dl>
-        <li>Artistic and forward-thinking.</li>
+        <h3><li>Artistic and forward-thinking.</li></h3>
         <dl>A self-taught coder and artist at heart, I am able to respond intelligently and sensitively to both technological and aesthetic requirements.</dl>
-        <li>Holistic and empathetic.</li>
+        <h3><li>Holistic and empathetic.</li></h3>
         <dl>I think about design in terms of crafting a dynamic experience, rather than a static thing, syncing with the user's lifestyle, thoughts, feelings, and sensations. My ultimate aim is to create something that resonates with the user's identity,
           and the way they perceive or experience the world.</br>
-        Having studied phenomenology and embodiment philosophies in an academic capacity, I am deeply interested in how the body mediates our subjective experiences, of tech and beyond. In practise, I enjoy exploring interconnectedness and working with freeing bodily blocks as a part-time <a href="http://www.lucyroseyoga.com/" target="_blank">yoga teacher.</a></dl>
+        <!-- Having studied phenomenology and embodiment philosophies in an academic capacity, I am deeply interested in how the body mediates our subjective experiences, of tech and beyond. In practise, I enjoy exploring interconnectedness and working with freeing bodily blocks as a part-time <a href="http://www.lucyroseyoga.com/" target="_blank">yoga teacher.</a></dl> -->
       </ul>
       <img src="./imgs/alice-quote.png" alt="" class="about-drawing">
-      <h2>So what's my story?</h2>
+      <!-- <h2>So what's my story?</h2>
       <p>I have always been particularly intrigued by colour, texture, and form. Indeed, when I was younger, I dreamed of becoming a Textile Artist.</p>
       <p>Lured by the intellectual challenges of the Humanities, however, I went on to study Modern Languages and Philosophy at Durham.</p>
       <p>I started teaching myself to code in my student bedroom. I also reconnected with the art world by spending my third year abroad, studying Bellas Artes at the Universidad de Vigo in Spain.</p>
@@ -51,7 +52,7 @@
       <p>I also consult with startups on their digital strategy.</p>
       <p>I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. Whereas product owners who consider themselves “not particularly technical" feel that they can trust me to do a great job, because I have their best interests at heart.</p>
       <p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical sides of my personality. I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p>
-      </br>
+      </br> -->
       <h2>More potentially useful info:</h2>
       <ul class="links-list">
         <li>Bookmark my <a href="./cv.html" target="_blank">CV</a></li>
@@ -63,10 +64,7 @@
   <div class="under-footer"></div>
   <footer>
     <ul>
-      <li id="copyright">&copy 2017</li>
-      <a href="mailto:lucy.rose.sabin@gmail.com">
-        <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
-      </a>
+      <li id="copyright">&copy Copyright 2017 L.S.</li>
     </ul>
   </footer>
 </body>
