--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
 <body>
   <nav>
     <ul>
-      <li><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></li>
+      <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
       <li class="nav-option"><a href="./about.html">About</a></li>
-      <li class="nav-option"><a href="#portfolio-section">Portfolio</a></li>
+      <li class="nav-option">Portfolio</li>
+      <li class="nav-option"><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <div class="under-nav"></div>
 
   <section class="intro-text">
-    <p class="heading add-margin">Hello! I'm Lucy, a user-centred Designer based in London, specialising in Websites and Web Apps.</p>
-    <p class="add-margin">The most important part of my job is designing around you, your business, and your audience.</p>
-    <p>If you'd like to discuss a project, feel free to <a href="mailto:lucy.rose.sabin@gmail.com">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee :)</p>
+    <p class="heading">Hello curious visitor!</p>
+    <p>I'm Lucy, a human-centred designer based in London, specialising in websites and apps.</p>
+    <p>If you'd like to discuss a project, feel free to <a href="mailto:lucy.rose.sabin@gmail.com" class="contact__link">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee :)</p>
+    <p>Here is my portfolio by the way...</p>
   </section>
 
-  <article class="portfolio-wrapper" id="portfolio-section">
+<article class="portfolio-wrapper" id="portfolio-section">
 
 <div class="portfolio-cover">
   <a href="./makatalk.html">
@@ -101,8 +103,8 @@
 
   <footer>
     <ul>
-      <li id="copyright">&copy 2017</li>
-      <a href ="mailto:lucy.rose.sabin@gmail.com"><li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li></a>
+      <li id="copyright">&copy Copyright 2017 L.S.</li>
+      <!-- <a href ="mailto:lucy.rose.sabin@gmail.com"><li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li></a> -->
     </ul>
   </footer>
 </body>
