--- a/makatalk.html
+++ b/makatalk.html
@@ -14,9 +14,10 @@
   <nav>
     <ul>
       <ul>
-        <li><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></li>
+        <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
         <li class="nav-option"><a href="./about.html">About</a></li>
         <li class="nav-option"><a href="./index.html">Portfolio</a></li>
+        <li class="nav-option"><a href="./contact.html">Contact</a></li>
       </ul>
     </ul>
   </nav>
@@ -37,8 +38,8 @@
   <div class="under-footer"></div>
   <footer>
     <ul>
-      <li id="copyright">&copy 2017</li>
-      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy Copyright 2017 L.S.</li>
+      <!-- <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li> -->
     </ul>
   </footer>
 </body>
