--- a/publications.html
+++ b/publications.html
@@ -16,12 +16,13 @@
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
       <li class="nav-option"><a href="./about.html">About</a></li>
       <li class="nav-option"><a href="./index.html">Portfolio</a></li>
+      <li class="nav-option"><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="about-wrapper">
     <section class="about-main-text">
-      <h1>An Assortment Of Published Works</h1>
+      <h1>An Assortment Of Published Works by Lucy Sabin</h1>
       <ul>
         <li class="heading">How to live mindfully, every day.</li></br>
         <dl>
@@ -77,8 +78,7 @@
   <div class="under-footer"></div>
   <footer>
     <ul>
-      <li id="copyright">&copy 2017</li>
-      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy Copyright 2017 L.S.</li>
     </ul>
   </footer>
 </body>
