--- a/bagrut.html
+++ b/bagrut.html
@@ -22,9 +22,10 @@
   <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>UX Research For An Advanced Grammar Revision App.</h1>
-    <p>Te'udat Bagrut (Hebrew: תעודת בגרות‎) is the high school matriculation certificate in Israel. I researched how to approach building an advanced grammar app that would help students to revise for the exam in short bursts. This was a project in collaboration with Founders and Coders, Nazareth.</p>
     <img src="./imgs/demographics.jpg" alt="" class="project-img">
-    <p><a href="https://github.com/lucyrose93/user-research-bagrut/blob/master/UX-initial-research.md" target="_blank">Here</a> is my comprehensive UX research document on GitHub, with user profiling, market research, pedagogical analysis, basic prototyping, colour theory in the learning environment, and typographical suggestions.</p>
+    <p>Te'udat Bagrut (Hebrew: תעודת בגרות‎) is the high school matriculation certificate in Israel. I researched how to approach building an advanced grammar app that would help students to revise for the exam in short bursts. This was a project in collaboration with Founders and Coders, Nazareth. Below is my first prototype, demonstrating layout:</p>
+    <img src="./imgs/bagrut-prototype.png" alt="" class="project-img">
+    <p>And <a href="https://github.com/lucyrose93/user-research-bagrut/blob/master/UX-initial-research.md" target="_blank">here</a> is my comprehensive UX research document on GitHub, with user profiling, market research, pedagogical analysis, basic prototyping, colour theory in the learning environment, and suggestions for font.</p>
   </article>
   <div class="under-footer"></div>
   <footer>
