--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="imgs/zen.ico" type="image/x-icon">
   <link rel="stylesheet" href="master.css" type="text/css">
-  <title>Lucy Sabin | Portfolio</title>
+  <title>Lucy Sabin | Contact</title>
 </head>
 
 <body>
@@ -25,8 +25,7 @@
 
     <section class="contact" id="contact">
       <p class="contact__para">
-        Got a project to discuss? I look forward to hearing from you.</br>
-      Please write your message below; I'll aim to respond within 2 working days.</p>
+        Please write your message below.<em>I'll aim to respond within 2 working days.</em></p>
       <form
         role="form"
         class="form"
