--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div class="under-nav"></div>
 
   <section class="intro-text">
-    <p class="heading">Hello curious visitor!</p>
-    <p>I'm Lucy, a human-centred designer based in London, specialising in websites and apps.</p>
+    <p class="heading">Hello there!</p>
+    <p>Lucy here, a human-centred designer and maker, specialising in websites and apps.</p>
     <p>If you'd like to discuss a project, feel free to <a href="mailto:lucy.rose.sabin@gmail.com" class="contact__link">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee :)</p>
     <p>Here is my portfolio by the way...</p>
   </section>
@@ -41,17 +41,6 @@
     </div>
   </a>
 </div>
-
-<!-- <div class="portfolio-cover">
-  <a href="./coot-freight.html">
-    <div class="container-fade">
-      <img src="./imgs/coot-cover-mobile.png" alt="" class="portfolio-piece">
-      <div class="overlay">
-        <div class="text">Coot Freight</br>(site re-design)</div>
-      </div>
-    </div>
-  </a>
-</div> -->
 
   <div class="portfolio-cover">
     <a href="./arabin.html">
@@ -76,6 +65,17 @@
   </div>
 
   <div class="portfolio-cover">
+    <a href="./hardware.html">
+      <div class="container-fade">
+        <img src="./imgs/hardware.png" alt="" class="portfolio-piece">
+        <div class="overlay">
+          <div class="text">Classroom hardware</br>(Raspberry Pi)</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <div class="portfolio-cover">
     <a href="./bagrut.html">
       <div class="container-fade">
         <img src="./imgs/bagrut-cover-mobile.png" alt="" class="portfolio-piece">
@@ -91,7 +91,7 @@
     <div class="container-fade">
       <img src="./imgs/yoga-cover-mobile.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">LucyRoseYoga</br>(responsive site)</div>
+        <div class="text">LucyRoseYoga</br>(logo and branding)</div>
       </div>
     </div>
   </a>
