--- a/yoga.html
+++ b/yoga.html
@@ -21,12 +21,16 @@
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>A Stylish One-Page Website.</h1>
-    <p>Simple business websites need to convey a sense of personality, as well as clarity about what the company or individual does.</p>
-    <p>For my personal yoga website, I gained a lot of useful feedback over social media. I'm pretty happy with <a href="www.lucyroseyoga.com" target="_blank">the finished result.</a></p>
-    <img src="./imgs/rainbowlogotextlarge.jpg" alt="" class="project-img">
-    <p>The above was one of my shortlist logo designs for LucyRoseYoga. I created it following a trip to India, and was keen to incorporate all of the colours of the energy body. However, people I spoke to in the UK felt that the geometrical form and colour scheme combined appeared mystic or esoteric. This concerned me, because my aim as a Yoga Instructor is to make yoga accessible to everyone. So I opted for a fresher look that still uses a powerful geometric form in the vesica piscis. The colours are calmer and evocative of nature, so the message is more down to earth and inviting I hope!</p>
-    <img src="./imgs/LucyRoseYoga.png" alt="" class="project-img">
+    <h1>Logos and Branding for my Yoga Business.</h1>
+    <div class="img-panel">
+      <img src="./imgs/rainbowlogotextlarge.jpg" alt="" class="project-img">
+      <img src="./imgs/lucyroseyoga-tablet.png" alt="" class="project-img">
+      <img src="./imgs/LucyRoseYoga.png" alt="" class="project-img" id="yoga-logo">
+    </div>
+    <p>For <a href="www.lucyroseyoga.com" target="_blank">my yoga website</a>, I gained a lot of useful feedback over social media. I'm pretty happy with the finished result; it took some investigating to achieve the right brand image.</p>
+    <p>The logo on the left was one of my shortlisted designs, but it didn't make the cut. Informal testing revealed that hippy yogis (like me) loved it, but people new to yoga found it strange. Some said that the complex shapes and colour scheme combined made it look mystic or esoteric.</p>
+    <p>Given that most of my clients are new-ish to yoga, I set out to design a logo that would appeal to them too (top right).</p>
+    <p>I opted for a fresher look that still uses a powerful geometric form: the vesica piscis. The colours are tranquil and evocative of nature, so the message is more down to earth and inviting.</p>
     <p><em>I used: pencil and paper, Photoshop, HTML5, CSS, JavaScript, Formspree.</em></p>
   </article>
   <div class="under-footer"></div>
