--- a/arabin.html
+++ b/arabin.html
@@ -22,14 +22,16 @@
   <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>Promoting Diversity Within The Israeli Tech Scene.</h1>
-    <p><a href="https://github.com/UKITH/Arabs-Startups" target="_blank">Arab Innovators</a> is a platform that I designed, given a brief by the British Embassy to create an online directory for startups run by Arabs in Israel.</p>
-    <p>Just 2% of startups in Israel are run by Arabs, despite the fact that they represent 20% of the population. From <a href="https://github.com/UKITH/Arabs-Startups/blob/UX/UX-research.md" target="_blank">my research</a>, I deduced that this is due to a range of factors; discrimination, cultural norms, and geography all play a part.</p>
+    <div class="img-panel">
+      <img src="./imgs/arabin-mobile-home.png" alt="" class="project-img">
+      <img src="./imgs/arabin-mobile-about.png" alt="" class="project-img">
+      <img src="./imgs/arabin-mobile-contact.png" alt="" class="project-img">
+    </div>
+    <p>Arab Innovators is a platform for promoting startups with Palestinian/Arab Founders. The project was commissioned by the British Embassy and developed at Founders and Coders.</p>
+    <p>Just 2% of startups in Israel are run by Arab/Palestinian people, even though they represent 20% of the population. From <a href="https://github.com/UKITH/Arabs-Startups/blob/UX/UX-research.md" target="_blank">my research</a>, I deduced that this is due to a range of factors: discrimination, cultural norms, and geography all play a part.</p>
     <p>Arab Innovators aims to increase the visibility of Arab entrepreneurs in the eyes of investors, with an Events and News page that champion success stories.</p>
     <p>The aim is to create a sense of community, while showcasing talented role models. In further iterations I would like to supplement this with a newsfeed on the landing page and more of a social media presence.</p>
-    <p>At the moment, the team and product owner are still adding to their initial database of startups and collecting feedback from investors.</p>
-    <img src="./imgs/arabin-naz.png" alt="" class="project-img">
-    <p>As you can see, I was initially inspired by photographs of Nazareth at night, showcasing a town with a dense Arab/Palestinian population as an almost magical place full of opportunity.</p>
-    <img src="./imgs/arabin-mobile.png" alt="" class="project-img">
+    <p>At the moment, the team and product owner are still adding to their initial database of startups and collecting feedback from their network of startups and investors.</p>
     <p><em>I used: pencil and paper, Sketch App, InVision</em></p>
   </article>
   <div class="under-footer"></div>
