update yoga link

--- a/yoga.html
+++ b/yoga.html
@@ -27,7 +27,7 @@
       <img src="./imgs/lucyroseyoga-tablet.png" alt="" class="project-img">
       <img src="./imgs/LucyRoseYoga.png" alt="" class="project-img" id="yoga-logo">
     </div>
-    <p>For <a href="www.lucyroseyoga.com" target="_blank">my yoga website</a>, I gained a lot of useful feedback over social media. I'm pretty happy with the finished result; it took some investigating to achieve the right brand image.</p>
+    <p>For <a href="http://www.lucyroseyoga.com/" target="_blank">my yoga website</a>, I gained a lot of useful feedback over social media. I'm pretty happy with the finished result; it took some investigating to achieve the right brand image.</p>
     <p>The logo on the left was one of my shortlisted designs, but it didn't make the cut. Informal testing revealed that hippy yogis (like me) loved it, but people new to yoga found it strange. Some said that the complex shapes and colour scheme combined made it look mystic or esoteric.</p>
     <p>Given that most of my clients are new-ish to yoga, I set out to design a logo that would appeal to them too (top right).</p>
     <p>I opted for a fresher look that still uses a powerful geometric form: the vesica piscis. The colours are tranquil and evocative of nature, so the message is more down to earth and inviting.</p>
