--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,9 @@
   <main role="main" class="main">
 
     <section class="contact" id="contact">
+      <h1>Let's Connect!</h1>
       <p class="contact__para">
-        Please write your message below.<em>I'll aim to respond within 2 working days.</em></p>
+        Please write me a message below with a brief outline of your project.</p>
       <form
         role="form"
         class="form"
