--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section class="intro-text">
     <p class="heading">Hello there!</p>
     <p>Lucy here, a human-centred designer and maker, specialising in websites and apps.</p>
-    <p>If you'd like to discuss a project, feel free to <a href="mailto:lucy.rose.sabin@gmail.com" class="contact__link">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee :)</p>
+    <p>If you'd like to discuss a project, feel free to <a href="./contact.html" class="contact__link">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee :)</p>
     <p>Here is my portfolio by the way...</p>
   </section>
 
