--- a/about.html
+++ b/about.html
@@ -61,6 +61,9 @@
             <a href="https://yogainternational.com/article/view/the-ultimate-guide-to-taking-yoga-off-the-mat" target="_blank">"The Ultimate Guide To Taking Yoga Off The Mat"</a>, <em>Yoga International</em>, February 7th 2017 (9/10 from around 1000 reviewers).
           </dl>
           <dl>
+            "Improve Your Relationships Through Yoga", <em>Om Magazine</em> (print edition), February 1st 2017.
+          </dl>
+          <dl>
             <a href="https://yogainternational.com/article/view/6-red-flags-to-watch-out-for-in-the-era-of-yoga-consumerism" target="_blank">"6 Red Flags To Watch Out For In The Era Of Yoga Consumerism"</a>, <em>Yoga International</em>, November 28th 2016.
           </dl>
           <li class="heading">On Cinema, Philosophy and interdisciplinary thinking.</li></br>
