add three new portfolio pieces

--- a/index.html
+++ b/index.html
@@ -31,6 +31,45 @@
 
 <article class="portfolio-wrapper" id="portfolio-section">
 
+
+
+
+
+
+
+  <div class="portfolio-cover">
+    <a href="./stopmycraving.html">
+      <div class="container-fade">
+        <img src="./imgs/stopmycraving-cover.png" alt="" class="portfolio-piece">
+        <div class="overlay">
+          <div class="text">StopMyCraving</br>(e-commerce & packaging)</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <div class="portfolio-cover">
+    <a href="./gladwell.html">
+      <div class="container-fade">
+        <img src="./imgs/gladwell-cover.png" alt="" class="portfolio-piece">
+        <div class="overlay">
+          <div class="text">Gladwell Massage</br>(website)</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <div class="portfolio-cover">
+    <a href="./coot-freight.html">
+      <div class="container-fade">
+        <img src="./imgs/coot-cover.png" alt="" class="portfolio-piece">
+        <div class="overlay">
+          <div class="text">Coot Freight</br>(website & copy)</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
 <div class="portfolio-cover">
   <a href="./makatalk.html">
     <div class="container-fade">
@@ -47,7 +86,7 @@
       <div class="container-fade">
         <img src="./imgs/arabin-cover-mobile.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Arab Innovators</br>(responsive site)</div>
+          <div class="text">Arab Innovators</br>(website)</div>
         </div>
       </div>
     </a>
@@ -69,7 +108,7 @@
       <div class="container-fade">
         <img src="./imgs/hardware.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Classroom hardware</br>(Raspberry Pi)</div>
+          <div class="text">Classroom hardware</br>(LED display)</div>
         </div>
       </div>
     </a>
@@ -91,7 +130,7 @@
     <div class="container-fade">
       <img src="./imgs/yoga-cover-mobile.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">LucyRoseYoga</br>(logo and branding)</div>
+        <div class="text">LucyRoseYoga</br>(branding & website)</div>
       </div>
     </div>
   </a>
