--- a/stopmycraving.html
+++ b/stopmycraving.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="imgs/zen.ico" type="image/x-icon">
   <link rel="stylesheet" href="./master.css">
-  <title>Lucy Sabin | Coot Freight</title>
+  <title>Lucy Sabin | StopMyCraving</title>
 </head>
 <body>
   <nav>
@@ -21,11 +21,12 @@
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <img src="imgs/coming-soon.gif" alt="coming soon gif" class="project-img">
-    <h1>Coot Freight: Website & Copy.</h1>
-    <p>Coot Freight is a bespoke, international freight forwarding company. We are working together to re-design their website and freshen up the copy.</p>
-    <p>I have conducted preliminary user testing with their current website, and websites for other shipping companies. The discoveries I made about user behaviours in relation to the industry were integral to prototyping solutions. The finalised solution is currently in the pipeline...</p>
-    <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop.</em></p>
+    <h1>StopMyCraving: User journeys, E-commerce Platform, Packaging, Branding.</h1>
+    <img src="./imgs/stopmycraving-box.png" alt="" class="project-img">
+    <p>Not yet live! StopMyCraving is a healthy snacks company, judged a UK Top 20 startup last year, with a place on Europe's Number 1 accelerator programme this year.</p>
+    <p>As their lead designer, I have been working with the team to develop user journeys, redesign the e-commerce platform, design new products, and align the confident brand identity with snazzy recyclable packaging (pictured above on a partner's online store).</p>
+    <p>I wish I could share the visuals with you now; fortunately it won't be long until the new e-commerce platform is up!</p>
+    <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop, Adobe Illustrator.</em></p>
   </article>
   <div class="under-footer"></div>
   <footer>
