--- a/gladwell.html
+++ b/gladwell.html
@@ -21,11 +21,12 @@
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <img src="imgs/coming-soon.gif" alt="coming soon gif" class="project-img">
-    <h1>Coot Freight: Website & Copy.</h1>
-    <p>Coot Freight is a bespoke, international freight forwarding company. We are working together to re-design their website and freshen up the copy.</p>
-    <p>I have conducted preliminary user testing with their current website, and websites for other shipping companies. The discoveries I made about user behaviours in relation to the industry were integral to prototyping solutions. The finalised solution is currently in the pipeline...</p>
-    <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop.</em></p>
+    <h1>Gladwell Massage: Website</h1>
+    <p>Daniel Gladwell is a renowned masseur with over 20 years' experience. I am currently revamping his website. The new designs are super mobile-friendly, with the appearance of a web app, so clients can easily book on the go. Here's a quick peek at the work in progress...</p></br>
+    <img src="./imgs/gladwell-desktop.png" alt="" class="project-img">
+    <img src="./imgs/gladwell-logo-variations.png" alt="" class="project-img">
+    <img src="./imgs/gladwell-mobile.png" alt="" class="project-img">
+    <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop, HTML, CSS, GitHub.</em></p>
   </article>
   <div class="under-footer"></div>
   <footer>
