change about copy

--- a/about.html
+++ b/about.html
@@ -23,8 +23,10 @@
   <article class="about-wrapper">
     <section class="about-main-text">
       <img src="./imgs/profile-drawing.png" alt="" class="about-drawing">
-      <p class="heading"><span class="enlarge">I'm a designer and deep thinker,</span> driven to create engaging and joyful experiences. I offer consultancy, design, and development. I also know about copywriting and brand. </p>
-      <p class="heading">When I'm not working on freelance design projects, you might find me teaching yoga</a> or chilling in Victoria Park.</p>
+      <p class="heading"><span class="enlarge">I'm a designer and deep thinker</span>, driven to create engaging and joyful experiences. I have front end development skills (HTML, CSS, JavaScript), research experience, an artistic background, and copywriting experience.</p>
+      I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
+      <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.
+
       <div class="contact__button"><a href="./contact.html">Get in touch</a></div>
       <h1>My approach to designing and making is:</h1>
       <ul class="my-approach-list">
@@ -40,21 +42,19 @@
           and the way they perceive or experience the world.</br>
       </ul>
       <img src="./imgs/alice-quote.png" alt="" class="about-drawing">
-      <!-- <h2>So what's my story?</h2>
-      <p>I have always been particularly intrigued by colour, texture, and form. Indeed, when I was younger, I dreamed of becoming a Textile Artist.</p>
+      <h2>So what's my story?</h2>
+      <p>I have always been particularly intrigued by colour, texture, and form. When I was younger, I dreamed of becoming a Textile Artist.</p>
       <p>Lured by the intellectual challenges of the Humanities, however, I went on to study Modern Languages and Philosophy at Durham.</p>
       <p>I started teaching myself to code in my student bedroom. I also reconnected with the art world by spending my third year abroad, studying Bellas Artes at the Universidad de Vigo in Spain.</p>
-      <p>Moving image culture became a real passion at university; my final year dissertation applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many ways, the filmmaker is like an interaction designer, who looks to involve the audience in a journey, by crafting an emotional, sensual experience.</p>
-      <p>Anyways, I guess you could say that a big part of me is drawn to exploring other cultures and questioning assumptions about human nature; this outlook continues to inform my freelance writing portfolio and open-minded approach as a designer.</p>
-      <p>Since graduating Durham, I have worked in digital media, honing my coding, communication, and design skills.</p>
-      <p>As a UX Designer at Founders and Coders, I work with small teams to develop digital products using an agile/lean methodology. We work with everyone from education and mental health charities to industrial and e-commerce platforms.
-      <p>I also consult with startups on their digital strategy.</p>
-      <p>I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. Whereas product owners who consider themselves “not particularly technical" feel that they can trust me to do a great job, because I have their best interests at heart.</p>
-      <p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical sides of my personality. I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p>
-      </br> -->
-      <!-- <section class="about-main-text"> -->
+      <p>Moving image culture became a real passion at university. My final year dissertation applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many respects, the filmmaker is like an interaction designer, who looks to involve the audience in a journey, by crafting an emotional, sensual experience.</p>
+      <p>Anyways, I guess you could say that a big part of me is drawn to exploring other cultures and questioning assumptions about human nature; this outlook continues to inform my open-minded approach as a designer.</p>
+      <p>Since graduating Durham, I have applied my "can do" attitude to digital media, honing my coding, communication, and graphics skills. I use an agile/lean methodology, inspired by the Founders and Coders bootcamp; I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. I also build special relationships with Product Owners, because I care about helping to bring their dreams to lifestyle.</p>
+      <p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical sides of my personality. It's great to be able to share this passion with others, through writing and, lately, through workshops with design students. </p>
+      <p>I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p>
+      </br>
+
         <h1>Publications</h1>
-        <p>Having studied phenomenology and embodiment philosophies in an academic capacity, I am deeply interested in how the body mediates our subjective experiences of art, technology, and the world around us, hence the varied collection of research and writings that you see below.</p>
+        <p>I love to write and do so on a semi-professional basis.</p>
         <ul>
           <li class="heading">How to live mindfully, every day.</li></br>
           <dl>
