--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@
 
 <article class="portfolio-wrapper" id="portfolio-section">
 
-
-
-
-
-
-
   <div class="portfolio-cover">
     <a href="./stopmycraving.html">
       <div class="container-fade">
@@ -119,7 +113,7 @@
       <div class="container-fade">
         <img src="./imgs/bagrut-cover-mobile.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Language App </br>(UX research)</div>
+          <div class="text">Language app </br>(UX research)</div>
         </div>
       </div>
     </a>
