--- a/about.html
+++ b/about.html
@@ -22,12 +22,9 @@
   <div class="under-nav"></div>
   <article class="about-wrapper">
     <section class="about-main-text">
+      <h1>I'm a designer and deep thinker.</h1>
+      <p class="heading">Driven to create meaningful experiences, I can code, research, draw, write, present, communicate and design.</p></br>
       <img src="./imgs/profile-drawing.png" alt="" class="about-drawing">
-      <p class="heading"><span class="enlarge">I'm a designer and deep thinker</span>, driven to create engaging and joyful experiences. I have front end development skills (HTML, CSS, JavaScript), research experience, an artistic background, and copywriting experience.</p>
-      I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
-      <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.
-
-      <div class="contact__button"><a href="./contact.html">Get in touch</a></div>
       <h1>My approach to designing and making is:</h1>
       <ul class="my-approach-list">
         <h3><li>User-centred.</li></h3>
@@ -41,20 +38,38 @@
         <dl>I think about design in terms of crafting a dynamic experience, rather than a static thing, syncing with the user's lifestyle, thoughts, feelings, and sensations. My ultimate aim is to create something that resonates with the user's identity,
           and the way they perceive or experience the world.</br>
       </ul>
-      <img src="./imgs/alice-quote.png" alt="" class="about-drawing">
-      <h2>So what's my story?</h2>
-      <p>I have always been particularly intrigued by colour, texture, and form. When I was younger, I dreamed of becoming a Textile Artist.</p>
+
+    <div id="orgs">
+      <h1>Organisations I've worked with include:</h1>
+      <img src="./imgs/logos-anna.png" alt="Anna Freud Centre" class="partner-logo">
+      <img src="./imgs/logos-fac.png" alt="Founders & Coders logo" class="partner-logo">
+      <img src="./imgs/logos-nhs.png" alt="NHS NW London logo" class="partner-logo">
+      <img src="./imgs/logos-israel.png" alt="Brit Embassy and Israel Tech Hub" class="partner-logo">
+      <img src="./imgs/logos-uca.png" alt="University for Creative Arts" class="partner-logo">
+      <img src="./imgs/logos-stopmycraving.png" alt="stopmycraving logo" class="partner-logo">
+    </div>
+
+      <h1>My Story</h1>
+
+      <img src="./imgs/my-story.png" alt="" class="about-drawing">
+
+      <p>Always learning, I apply a "can do" attitude to digital media. Alongside freelancing, I have lectured on Interaction and Interface Design at the University for Creative Arts.</p>
+      <p>In addition to UX, I am passionate about yoga, teaching hot Vinyasa Flow on Thursdays and Sundays in Hackney. Having studied French, Spanish and Philosophy at University, I am trilingual and love cross-culturally studying human nature. I am fascinated by: feminist film culture, tech for good, psychological and philosophical theories of embodiment and extended cognition.</p>
+
+      <!--I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
+      <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.</p>-->
+
+      <!-- <p>I have always been particularly intrigued by colour, texture, and form. When I was younger, I dreamed of becoming a Textile Artist.</p>
       <p>Lured by the intellectual challenges of the Humanities, however, I went on to study Modern Languages and Philosophy at Durham.</p>
       <p>I started teaching myself to code in my student bedroom. I also reconnected with the art world by spending my third year abroad, studying Bellas Artes at the Universidad de Vigo in Spain.</p>
       <p>Moving image culture became a real passion at university. My final year dissertation applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many respects, the filmmaker is like an interaction designer, who looks to involve the audience in a journey, by crafting an emotional, sensual experience.</p>
       <p>Anyways, I guess you could say that a big part of me is drawn to exploring other cultures and questioning assumptions about human nature; this outlook continues to inform my open-minded approach as a designer.</p>
       <p>Since graduating Durham, I have applied my "can do" attitude to digital media, honing my coding, communication, and graphics skills. I use an agile/lean methodology, inspired by the Founders and Coders bootcamp; I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. I also build special relationships with Product Owners, because I care about helping to bring their dreams to lifestyle.</p>
       <p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical sides of my personality. It's great to be able to share this passion with others, through writing and, lately, through workshops with design students. </p>
-      <p>I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p>
-      </br>
+      <p>I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p> -->
 
         <h1>Publications</h1>
-        <p>I love to write and do so on a semi-professional basis.</p>
+        <p>I write on a semi-professional basis, using journalism as an exploratory tool.</p>
         <ul>
           <li class="heading">How to live mindfully, every day.</li></br>
           <dl>
@@ -112,21 +127,21 @@
           </dl>
         </ul>
       </br>
-        <a href="./about.html" class="back-top"><h3>Back to top</h3></a>
-      <!-- </section> -->
 
-      <!-- <h2>More potentially useful info:</h2>
-      <ul class="links-list">
-        <li>Bookmark my <a href="./cv.html" target="_blank">CV</a></li>
-        <li>Check out my <a href="https://github.com/lucyrose93" target="_blank">GitHub profile</a></li>
-        <li>See my <a href="./publications.html" target="_blank">Published works</a></li>
-      </ul> -->
+    <div id="more">
+      <h1 id="h1-more">More?</h1>
+      <p>Bookmark <a href="./cv.html" target="_blank">CV</a>, follow on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>.</p></br>
+    </div>
+
+        <div class="contact__button"><a href="./contact.html">Get in touch</a></div>
+        <a href="./about.html" class="back-top"><h3>Back to top</h3></a>
+
     </section>
   </article>
   <div class="under-footer"></div>
   <footer>
     <ul>
-      <li id="copyright">&copy Copyright 2017 L.S.</li>
+      <li id="copyright">&copy; Copyright 2017 L.S.</li>
     </ul>
   </footer>
 </body>
