--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <section class="contact" id="contact">
       <h1>Let's Connect!</h1>
       <p class="contact__para">
-        Please write me a message below with a brief outline of your project.</p>
+        Please write me a message below with a brief outline of your project. Alternatively, email: lucy.rose.sabin(a)gmail.com</p>
       <form
         role="form"
         class="form"
